SERVER-7282 Clean up namespace name length checks