src/mongo/db/namespace_string.h
@@ -173,10 +173,10 @@ namespace mongo {
     inline StringData nsToDatabaseSubstring( const StringData& ns ) {
         size_t i = ns.find( '.' );
         if ( i == std::string::npos ) {
-            massert(10078, "nsToDatabase: ns too long", ns.size() < MaxDatabaseNameLen );
+            massert(10078, "nsToDatabase: db too long", ns.size() < MaxDatabaseNameLen );
             return ns;
         }
-        massert(10088, "nsToDatabase: ns too long", i < static_cast<size_t>(MaxDatabaseNameLen));
+        massert(10088, "nsToDatabase: db too long", i < static_cast<size_t>(MaxDatabaseNameLen));
         return ns.substr( 0, i );
     }
 
