src/mongo/db/structure/catalog/namespace.h
@@ -70,9 +70,20 @@ namespace mongo {
         std::string extraName(int i) const;
         bool isExtra() const; /* ends with $extr... -- when true an extra block not a normal NamespaceDetails block */
 
-        enum MaxNsLenValue { MaxNsLen = 128 };
+        enum MaxNsLenValue {
+            // Maximum possible length of name any namespace, including special ones like $extra.
+            // This includes rum for the NUL byte so it can be used when sizing buffers.
+            MaxNsLenWithNUL = 128,
+
+            // MaxNsLenWithNUL excluding the NUL byte. Use this when comparing string lengths.
+            MaxNsLen = MaxNsLenWithNUL - 1,
+
+            // Maximum allowed length of fully qualified namespace name of any real collection.
+            // Does not include NUL so it can be directly compared to string lengths.
+            MaxNsColletionLen = MaxNsLen - 7/*strlen(".$extra")*/,
+        };
     private:
-        char buf[MaxNsLen];
+        char buf[MaxNsLenWithNUL];
     };
 #pragma pack()
 
